2006-04-27  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/Makefile.am: Remove any mention to /etc/others-menu
	* hildon-navigator/hildon-navigator-restore-plugins.sh: Added script
	  to remove plugin configurations which may have been restored from
	  an older version of the software

2006-04-27  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/hildon-home-restore-background.sh: Only restore the
	  background when necessary

2006-04-24  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/close-application-dialog.c: Fixed localisation
	  of the title, for real (Closes N#27433)

2006-04-24  Johan Bilien <johan.bilien@nokia.com>

	Applied fix to "icon focus incorrect after 'Not enough memory'"
	(Closes N#22638)
	* hildon-navigator/hn-wm.[ch]: Push an app to the bottom of the
	  stack of topping failed due to low memory

2006-04-24  Johan Bilien <johan.bilien@nokia.com>

	Applied fix to "TN Plugin (re)loading doesn't initialize menus"
	(Closes N#27316)
	* hildon-navigator/hildon-navigator-main.c:
	  - New function: initialize_plugin_menus():
	    Move plugin menu init to it's own function
	  - plugin_configuration_changed(): Init plugin menus after reloading
	* hildon-navigator/plugins.conf: Change positions to correct ones,
	  addition of Desktop-file key

2006-04-24  Johan Bilien <johan.bilien@nokia.com>

	* configure.ac: 2.6.11

2006-04-21  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/hildon-navigator-main.c: Removed warning
	  when a configuration file is not found, as this is the expected
	  behaviour before the user uses the TN CPA (Closes N#24138)

2006-04-21  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/hn-wm-watched-window.c: Removed deprecated
	  "Application closed" note (Closes N#26282)

2006-04-21  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/close-application-dialog.c: l10n id should
	  come from the ke-recv domain (Closes N#27433)

2006-04-21  Johan Bilien <johan.bilien@nokia.com>
