@@ -1,5 +1,10 @@
 2006-04-27  Johan Bilien <johan.bilien@nokia.com>
 
+	* hildon-navigator/hn-wm-memory.c: Removed deprecated memory low
+	  banner
+
+2006-04-27  Johan Bilien <johan.bilien@nokia.com>
+
 	* hildon-navigator/Makefile.am: Remove any mention to /etc/others-menu
 	* hildon-navigator/hildon-navigator-restore-plugins.sh: Added script
 	  to remove plugin configurations which may have been restored from
